frontend/src/components/ChatRoom/index.module.scss
.container {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.header {
  height: 3rem;
  background-color: #fff !important;
  h3 {
    display: inline-block;
    font-size: large;
    margin: 0;
  }
}
.content {
  flex: 1;
  display: flex;
  flex-direction: column;
}
.messages {
  flex: 1;
}

.userInput {
  height: 3rem;
  display: flex;
  padding: 0.5rem 2rem 0.3rem;
  button {
    height: 100%;
  }
}

